# game_scratch

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run
include/: Component.hpp  DynamicObject.hpp  ECS.hpp  Enemy.hpp  Entity.hpp  Game.hpp  GameObject.hpp  Map.hpp  Player.hpp  StaticObject.hpp  System.hpp  Texture.hpp  Utils.hpp  utils.hpp
res/anim/: animationsEnemy.json  animationsPlayer.json  idleWeaponPlayer.json  walkEnemy.json
res/map/: collision.json  environment.json  map.txt  objs.json  props.json
src/: Component.cpp  DynamicObject.cpp  Enemy.cpp  Entity.cpp  Game.cpp  GameObject.cpp  Map.cpp  Player.cpp  StaticObject.cpp  System.cpp  Texture.cpp  Utils.cpp  main.cpp
